FIX, Product service querys now receive store parameter